--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li class="copy">Taylor Massey</li>
         </ul>
 
-        <div class="no">Nema izabranih vozaca</div>
+        <p class="listaVozaca">Nema izabranih vozaca</p>
         <div class="contentHolder"></div>
         <div class="race"></div>
         <button class="sttart">Start</button>
