--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Car race</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="./style.css" rel="stylesheet" />
-    <script src="./script.js" defer></script>
-    <script src="./car.json"></script>
-    <script src="./fawesome.js" defer></script>
-    <script src="./tostify.js"></script>
+    <link href="./style/style.css" rel="stylesheet" />
+    <script src="./script/script.js" defer></script>
+    <script src="./json/car.json"></script>
+    <script src="./script/fawesome.js" defer></script>
+    <script src="./script/tostify.js"></script>
   </head>
   <body>
     <div class="projectHolder">
